# clickr

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  tagging.yaml
clickr/: app.py
